src/objects/Apttus_Config2__CustomerPOItem__c.object
<CustomObject>
    <description>Represents a product or service item in a purchase order</description>
    <fields>
        <fullName>Apttus_CMConfig__AgreementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated agreement</description>
        <inlineHelpText>ID of the associated agreement</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Customer PO Items</relationshipLabel>
        <relationshipName>CustomerPOItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__AgreementLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated agreement line item</description>
        <inlineHelpText>ID of the associated agreement line item</inlineHelpText>
        <label>Agreement Line Item</label>
        <referenceTo>Apttus__AgreementLineItem__c</referenceTo>
        <relationshipLabel>Customer PO Items</relationshipLabel>
        <relationshipName>CustomerPOItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChangeStatus__c</fullName>
        <description>The po item change status</description>
        <inlineHelpText>The po item change status</inlineHelpText>
        <label>Change Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>Amended</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContractItemName__c</fullName>
        <description>The name of the bundle or standalone product or service to be ordered</description>
        <inlineHelpText>The name of the bundle or standalone product or service to be ordered</inlineHelpText>
        <label>Contract Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContractItemNumber__c</fullName>
        <description>The Unique identifier for the item number as referred to in the quote or contract</description>
        <externalId>true</externalId>
        <inlineHelpText>The Unique identifier for the item number as referred to in the quote or contract</inlineHelpText>
        <label>Contract Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContractNumber__c</fullName>
        <description>The Reference number of the contract associated with the purchase order</description>
        <externalId>true</externalId>
        <inlineHelpText>The Reference number of the contract associated with the purchase order</inlineHelpText>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EndDate__c</fullName>
        <description>The Expected end date of the subscription or service</description>
        <inlineHelpText>The Expected end date of the subscription or service</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FulfilledQuantity__c</fullName>
        <description>The quantity fulfilled for the item</description>
        <inlineHelpText>The quantity fulfilled for the item</inlineHelpText>
        <label>Fulfilled Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FulfillmentStatus__c</fullName>
        <description>The item fulfillment status</description>
        <inlineHelpText>The item fulfillment status</inlineHelpText>
        <label>Fulfillment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Fulfilled</fullName>
                    <default>true</default>
                    <label>Not Fulfilled</label>
                </value>
                <value>
                    <fullName>Partially Fulfilled</fullName>
                </value>
                <value>
                    <fullName>Fulfilled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HasValidationErrors__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether there are validation errors associated with the po item</description>
        <inlineHelpText>Indicates whether there are validation errors associated with the po item</inlineHelpText>
        <label>Validation Errors ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Location__c</fullName>
        <description>The Location at which the products/services need to be installed at</description>
        <inlineHelpText>The Location at which the products/services need to be installed at</inlineHelpText>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NetPrice__c</fullName>
        <description>Net price based on unit price and quantity for the PO line item</description>
        <inlineHelpText>Net price based on unit price and quantity for the PO line item</inlineHelpText>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NetUnitPrice__c</fullName>
        <description>The net unit price for the product or service as per the contract or quote</description>
        <inlineHelpText>The net unit price for the product or service as per the contract or quote</inlineHelpText>
        <label>Net Unit Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NextVersion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the next version associated with the original purchase order item</description>
        <inlineHelpText>ID of the next version associated with the original purchase order item</inlineHelpText>
        <label>Next Version</label>
        <referenceTo>Apttus_Config2__CustomerPOItem__c</referenceTo>
        <relationshipLabel>Previous</relationshipLabel>
        <relationshipName>Previous</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NumberOfErrors__c</fullName>
        <description>The number of errors associated with the po item</description>
        <inlineHelpText>The number of errors associated with the po item</inlineHelpText>
        <label>Number Of Errors</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NumberOfWarnings__c</fullName>
        <description>The number of warnings associated with the po item</description>
        <inlineHelpText>The number of warnings associated with the po item</inlineHelpText>
        <label>Number Of Warnings</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OriginalPOLineNumber__c</fullName>
        <description>The line number of the associated original purchase order item</description>
        <externalId>true</externalId>
        <inlineHelpText>The PO line number that remains constant over the life cycle of the purchase order item across versions. During initial creation, Original PO line number is the same as PO line Number.</inlineHelpText>
        <label>Original PO Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentContractItemNumber__c</fullName>
        <description>Represents the parent item number associated with the item when it is part of a solution bundle</description>
        <inlineHelpText>Represents the parent item number associated with the item when it is part of a solution bundle</inlineHelpText>
        <label>Parent Contract Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PreviousVersion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the previous version associated with the amendment purchase order item</description>
        <inlineHelpText>ID of the previous version associated with the amendment purchase order item</inlineHelpText>
        <label>Previous Version</label>
        <referenceTo>Apttus_Config2__CustomerPOItem__c</referenceTo>
        <relationshipLabel>Amendments</relationshipLabel>
        <relationshipName>Amendments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the selected product or service</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Customer PO Items</relationshipLabel>
        <relationshipName>CustomerPOItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PurchaseOrderId__c</fullName>
        <description>ID of the associated purchase order</description>
        <inlineHelpText>ID of the associated purchase order</inlineHelpText>
        <label>Purchase Order</label>
        <referenceTo>Apttus_Config2__CustomerPurchaseOrder__c</referenceTo>
        <relationshipLabel>Customer PO Items</relationshipLabel>
        <relationshipName>CustomerPOItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Quantity__c</fullName>
        <description>The Quantity authorized in the PO</description>
        <inlineHelpText>The Quantity authorized in the PO</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__QuoteNumber__c</fullName>
        <description>The Reference number of the quote associated with the purchase order</description>
        <inlineHelpText>The Reference number of the quote associated with the purchase order</inlineHelpText>
        <label>Quote Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ReferencePOLineNumber__c</fullName>
        <description>The Reference PO item number from the external system</description>
        <externalId>true</externalId>
        <inlineHelpText>The Reference PO item number from the external system</inlineHelpText>
        <label>Reference PO Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RequestedDeliveryDate__c</fullName>
        <description>The date requested to deliver products and services referred to in the purchase order item</description>
        <inlineHelpText>The date requested to deliver products and services referred to in the purchase order item</inlineHelpText>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SalesOrderQuantity__c</fullName>
        <description>The Total quantity for which sales orders have already been created and confirmed against the purchase order item</description>
        <inlineHelpText>The Total quantity for which sales orders have already been created and confirmed against the purchase order item</inlineHelpText>
        <label>Sales Order Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SalesOrderTotal__c</fullName>
        <description>The Total amount for which sales orders have already been created and confirmed against the purchase order item</description>
        <inlineHelpText>The Total amount for which sales orders have already been created and confirmed against the purchase order item</inlineHelpText>
        <label>Sales Order Total</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShipToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the ship to account</description>
        <inlineHelpText>ID of the ship to account</inlineHelpText>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer PO Items (Ship To)</relationshipLabel>
        <relationshipName>CustomerPOItemsShipTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShipToAccountRefId__c</fullName>
        <description>The External account reference that will be used as ship-to-account for orders generated from the purchase order</description>
        <externalId>true</externalId>
        <inlineHelpText>The External account reference that will be used as ship-to-account for orders generated from the purchase order</inlineHelpText>
        <label>Ship To Account Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShiptoName__c</fullName>
        <description>The Ship To Account name as received from external system</description>
        <inlineHelpText>The Ship To Account name as received from external system</inlineHelpText>
        <label>Ship to Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StartDate__c</fullName>
        <description>The Expected start date of the subscription or service</description>
        <inlineHelpText>The Expected start date of the subscription or service</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Status__c</fullName>
        <description>The purchase order line status. This is used to capture the life cycle state of the purchase order item.</description>
        <inlineHelpText>The purchase order line status. This is used to capture the life cycle state of the purchase order item.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Partially Processed</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>In Amendment</fullName>
                </value>
                <value>
                    <fullName>Being Amended</fullName>
                </value>
                <value>
                    <fullName>Pending Cancellation</fullName>
                </value>
                <value>
                    <fullName>Being Cancelled</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__VersionNumber__c</fullName>
        <description>The version number. The number increments with each amendment of the purchase order item, for example, 1, 2, 3.</description>
        <inlineHelpText>The version number. The number increments with each amendment of the purchase order item, for example, 1, 2, 3.</inlineHelpText>
        <label>Version Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ProposalId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated quote/proposal</description>
        <inlineHelpText>ID of the associated quote/proposal</inlineHelpText>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Customer PO Items</relationshipLabel>
        <relationshipName>CustomerPOItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ProposalLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated quote/proposal line item</description>
        <inlineHelpText>ID of the associated quote/proposal line item</inlineHelpText>
        <label>Quote Line Item</label>
        <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
        <relationshipLabel>Customer PO Items</relationshipLabel>
        <relationshipName>CustomerPOItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Customer PO Item</label>
    <nameField>
        <displayFormat>POI-{00000000}</displayFormat>
        <label>PO Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer PO Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>